// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures — legacy profile snapshot contract > 01-22-pellet-30m-std :: .22 pellet 18gr @ 280 m/s, zero 30m, ICAO standard, no wind 1`] = `
[
  {
    "drop": -40,
    "energy": 45.722110896,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 280,
    "windDrift": 0,
  },
  {
    "drop": 39.7,
    "energy": 44.27,
    "holdover": -13.47,
    "holdoverMRAD": -3.92,
    "range": 10,
    "velocity": 275.5,
    "windDrift": 0,
  },
  {
    "drop": 26.5,
    "energy": 42.95,
    "holdover": -4.52,
    "holdoverMRAD": -1.32,
    "range": 20,
    "velocity": 271.4,
    "windDrift": 0,
  },
  {
    "drop": -0,
    "energy": 41.72,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 30,
    "velocity": 267.5,
    "windDrift": 0,
  },
  {
    "drop": -40.1,
    "energy": 40.59,
    "holdover": 3.44,
    "holdoverMRAD": 1,
    "range": 40,
    "velocity": 263.8,
    "windDrift": 0,
  },
  {
    "drop": -94.9,
    "energy": 39.52,
    "holdover": 6.51,
    "holdoverMRAD": 1.89,
    "range": 50,
    "velocity": 260.3,
    "windDrift": 0,
  },
  {
    "drop": -163.5,
    "energy": 38.54,
    "holdover": 9.35,
    "holdoverMRAD": 2.72,
    "range": 60,
    "velocity": 257.1,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 02-22-slug-100m-std :: .22 slug 25gr @ 320 m/s, zero 50m, max 100m, ICAO 1`] = `
[
  {
    "drop": -45,
    "energy": 82.9426048,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 320,
    "windDrift": 0,
  },
  {
    "drop": 56.7,
    "energy": 80.68,
    "holdover": -9.73,
    "holdoverMRAD": -2.83,
    "range": 20,
    "velocity": 315.6,
    "windDrift": 0,
  },
  {
    "drop": 28.8,
    "energy": 78.57,
    "holdover": -2.47,
    "holdoverMRAD": -0.72,
    "range": 40,
    "velocity": 311.5,
    "windDrift": 0,
  },
  {
    "drop": -39.3,
    "energy": 76.61,
    "holdover": 2.25,
    "holdoverMRAD": 0.65,
    "range": 60,
    "velocity": 307.5,
    "windDrift": 0,
  },
  {
    "drop": -149.1,
    "energy": 74.76,
    "holdover": 6.4,
    "holdoverMRAD": 1.86,
    "range": 80,
    "velocity": 303.8,
    "windDrift": 0,
  },
  {
    "drop": -302.1,
    "energy": 73,
    "holdover": 10.37,
    "holdoverMRAD": 3.02,
    "range": 100,
    "velocity": 300.2,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 03-25-heavy-75m-altitude :: .25 heavy pellet 33gr @ 270 m/s, zero 40m, altitude 1500m 1`] = `
[
  {
    "drop": -50,
    "energy": 77.94336889349998,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 270,
    "windDrift": 0,
  },
  {
    "drop": 52.9,
    "energy": 75.45,
    "holdover": -9.06,
    "holdoverMRAD": -2.64,
    "range": 20,
    "velocity": 265.7,
    "windDrift": 0,
  },
  {
    "drop": 0,
    "energy": 73.17,
    "holdover": -0,
    "holdoverMRAD": -0,
    "range": 40,
    "velocity": 261.6,
    "windDrift": 0,
  },
  {
    "drop": -110.2,
    "energy": 71.07,
    "holdover": 6.3,
    "holdoverMRAD": 1.83,
    "range": 60,
    "velocity": 257.8,
    "windDrift": 0,
  },
  {
    "drop": -279.1,
    "energy": 69.14,
    "holdover": 11.98,
    "holdoverMRAD": 3.48,
    "range": 80,
    "velocity": 254.3,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 04-30-long-range-150m :: .30 slug 50gr @ 290 m/s, zero 100m, max 150m, long range 1`] = `
[
  {
    "drop": -55,
    "energy": 136.239708275,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 290,
    "windDrift": 0,
  },
  {
    "drop": 165.3,
    "energy": 133.23,
    "holdover": -18.86,
    "holdoverMRAD": -5.49,
    "range": 30,
    "velocity": 286.8,
    "windDrift": 0,
  },
  {
    "drop": 167.7,
    "energy": 130.39,
    "holdover": -9.6,
    "holdoverMRAD": -2.79,
    "range": 60,
    "velocity": 283.7,
    "windDrift": 0,
  },
  {
    "drop": 60.2,
    "energy": 127.69,
    "holdover": -2.3,
    "holdoverMRAD": -0.67,
    "range": 90,
    "velocity": 280.8,
    "windDrift": 0,
  },
  {
    "drop": -158.1,
    "energy": 125.15,
    "holdover": 4.53,
    "holdoverMRAD": 1.32,
    "range": 120,
    "velocity": 277.9,
    "windDrift": 0,
  },
  {
    "drop": -491.4,
    "energy": 122.72,
    "holdover": 11.26,
    "holdoverMRAD": 3.28,
    "range": 150,
    "velocity": 275.2,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 05-177-fieldtarget-25m :: .177 pellet 8.4gr @ 240 m/s, zero 25m, field target 1`] = `
[
  {
    "drop": -38,
    "energy": 15.6761523072,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 240,
    "windDrift": 0,
  },
  {
    "drop": 36,
    "energy": 15.27,
    "holdover": -12.36,
    "holdoverMRAD": -3.59,
    "range": 10,
    "velocity": 236.9,
    "windDrift": 0,
  },
  {
    "drop": 16.5,
    "energy": 14.88,
    "holdover": -2.83,
    "holdoverMRAD": -0.82,
    "range": 20,
    "velocity": 233.8,
    "windDrift": 0,
  },
  {
    "drop": -20.9,
    "energy": 14.5,
    "holdover": 2.39,
    "holdoverMRAD": 0.7,
    "range": 30,
    "velocity": 230.8,
    "windDrift": 0,
  },
  {
    "drop": -77.3,
    "energy": 14.12,
    "holdover": 6.63,
    "holdoverMRAD": 1.93,
    "range": 40,
    "velocity": 227.8,
    "windDrift": 0,
  },
  {
    "drop": -151.9,
    "energy": 13.76,
    "holdover": 10.43,
    "holdoverMRAD": 3.03,
    "range": 50,
    "velocity": 224.9,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 06-22-cold-dry :: .22 pellet 18gr, cold (-10°C) dry (20% RH) — same gun as #01 1`] = `
[
  {
    "drop": -40,
    "energy": 45.722110896,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 280,
    "windDrift": 0,
  },
  {
    "drop": 39.7,
    "energy": 44.12,
    "holdover": -13.48,
    "holdoverMRAD": -3.92,
    "range": 10,
    "velocity": 275.1,
    "windDrift": 0,
  },
  {
    "drop": 26.4,
    "energy": 42.68,
    "holdover": -4.53,
    "holdoverMRAD": -1.32,
    "range": 20,
    "velocity": 270.5,
    "windDrift": 0,
  },
  {
    "drop": -0,
    "energy": 41.36,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 30,
    "velocity": 266.3,
    "windDrift": 0,
  },
  {
    "drop": -40.6,
    "energy": 40.13,
    "holdover": 3.49,
    "holdoverMRAD": 1.01,
    "range": 40,
    "velocity": 262.3,
    "windDrift": 0,
  },
  {
    "drop": -95.5,
    "energy": 39,
    "holdover": 6.56,
    "holdoverMRAD": 1.91,
    "range": 50,
    "velocity": 258.6,
    "windDrift": 0,
  },
  {
    "drop": -165.1,
    "energy": 37.95,
    "holdover": 9.44,
    "holdoverMRAD": 2.75,
    "range": 60,
    "velocity": 255.1,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 07-22-hot-humid :: .22 pellet 18gr, hot (35°C) humid (90% RH) — same gun as #01 1`] = `
[
  {
    "drop": -40,
    "energy": 45.722110896,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 280,
    "windDrift": 0,
  },
  {
    "drop": 39.7,
    "energy": 44.41,
    "holdover": -13.63,
    "holdoverMRAD": -3.97,
    "range": 10,
    "velocity": 275.9,
    "windDrift": 0,
  },
  {
    "drop": 26.5,
    "energy": 43.18,
    "holdover": -4.55,
    "holdoverMRAD": -1.32,
    "range": 20,
    "velocity": 272.1,
    "windDrift": 0,
  },
  {
    "drop": -0,
    "energy": 42.05,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 30,
    "velocity": 268.5,
    "windDrift": 0,
  },
  {
    "drop": -40.1,
    "energy": 40.98,
    "holdover": 3.44,
    "holdoverMRAD": 1,
    "range": 40,
    "velocity": 265.1,
    "windDrift": 0,
  },
  {
    "drop": -94.2,
    "energy": 39.99,
    "holdover": 6.47,
    "holdoverMRAD": 1.88,
    "range": 50,
    "velocity": 261.9,
    "windDrift": 0,
  },
  {
    "drop": -162.7,
    "energy": 39.06,
    "holdover": 9.31,
    "holdoverMRAD": 2.71,
    "range": 60,
    "velocity": 258.8,
    "windDrift": 0,
  },
]
`;

exports[`golden fixtures — legacy profile snapshot contract > 08-25-slug-altitude-1500 :: .25 slug 38gr @ 280 m/s, zero 50m, altitude 1500m, crosswind 5 m/s 1`] = `
[
  {
    "drop": -50,
    "energy": 96.52445633599999,
    "holdover": 0,
    "holdoverMRAD": 0,
    "range": 0,
    "velocity": 280,
    "windDrift": 0,
  },
  {
    "drop": 68.3,
    "energy": 95.16,
    "holdover": -11.69,
    "holdoverMRAD": -3.4,
    "range": 20,
    "velocity": 278,
    "windDrift": 21.6,
  },
  {
    "drop": 35.8,
    "energy": 93.85,
    "holdover": -3.07,
    "holdoverMRAD": -0.89,
    "range": 40,
    "velocity": 276.1,
    "windDrift": 43.2,
  },
  {
    "drop": -48.7,
    "energy": 92.58,
    "holdover": 2.78,
    "holdoverMRAD": 0.81,
    "range": 60,
    "velocity": 274.2,
    "windDrift": 65.1,
  },
  {
    "drop": -184.7,
    "energy": 91.36,
    "holdover": 7.93,
    "holdoverMRAD": 2.31,
    "range": 80,
    "velocity": 272.4,
    "windDrift": 87,
  },
  {
    "drop": -373.3,
    "energy": 90.19,
    "holdover": 12.83,
    "holdoverMRAD": 3.73,
    "range": 100,
    "velocity": 270.7,
    "windDrift": 109.1,
  },
]
`;
